# master-programm-bot

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.json  configs.example.json
src/adapter/config/: config.py
src/adapter/config/exceptions/: config.py
src/adapter/model/: model.py
src/adapter/telegram/: bot.py
src/adapter/telegram/handlers/: echo.py
src/interfaces/: exceptions.py
src/usecases/: __init__.py
src/utils/: parse.py  parse_html.py
