[tool.poetry]
name = "master-programm-bot"
version = "0.1.0"
description = ""
authors = ["Danil Romanov <danil.romanov@red-soft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.13.4"
requests = "^2.32.4"
pandas = "^2.3.1"
pyarrow = "^21.0.0"
selenium = "^4.34.2"
pdfplumber = "^0.11.7"
python-telegram-bot = "^22.3"
pydantic = "^2.11.7"
gigachat = "^0.1.41.post1"
openai = "^1.97.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
